@@ -1,6 +1,6 @@
 # this is NOT relocatable, unless you alter the patch!
 %define	name	ewl
-%define	ver	0.0.1
+%define	ver	0.0.0
 %define	rel	1
 %define prefix  /usr
 
@@ -10,7 +10,7 @@ Version: %{ver}
 Release: %{rel}
 Copyright: BSD
 Group: User Interface/X
-URL: http://www.enlightenment.org/efm.html
+URL: http://www.enlightenment.org/pages/ewl.html
 Packager: The Rasterman <raster@rasterman.com> Term <term@kempler.net>
 Vendor: The Enlightenment Development Team <e-develop@enlightenment.org>
 Source: ftp://ftp.enlightenment.org/enlightenment/%{name}-%{ver}.tar.gz
@@ -60,4 +60,5 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/lib/libewl.so
 %{prefix}/lib/libewl.*a
 %{prefix}/include/Ewl.h
+%{prefix}/include/ewl_*.h
 %{prefix}/bin/ewl-config
